# NYC-Taxi-Trip-

./: README.md  pyproject.toml  smartflow.db
smartflow-etl/: .gitignore  pyproject.toml
smartflow-etl/.tmp_dagster_home_6zxnaguo/history/: runs.db
smartflow-etl/.tmp_dagster_home_6zxnaguo/history/runs/: .db  05ff9437-0a0d-40f2-8ebb-1465287fcc00.db  179f5216-2323-4ac1-b3d2-502129d11510.db  30b50619-963a-4550-a082-42647027bf79.db  496b2453-170b-4a93-bb3f-641e819c5b46.db  502b8f80-f2ee-47d1-b743-d3009e259915.db  b826d455-e44c-45d0-bfe2-bfaa93c5b0ef.db  index.db  (+2 more)
smartflow-etl/.tmp_dagster_home_6zxnaguo/schedules/: schedules.db
smartflow-etl/.tmp_dagster_home_7de845qs/history/: runs.db
smartflow-etl/.tmp_dagster_home_7de845qs/schedules/: schedules.db
smartflow-etl/.tmp_dagster_home__6f5mblr/history/: runs.db
smartflow-etl/.tmp_dagster_home__6f5mblr/schedules/: schedules.db
smartflow-etl/.tmp_dagster_home_id6nuela/history/: runs.db
smartflow-etl/.tmp_dagster_home_id6nuela/schedules/: schedules.db
smartflow-etl/ai/: anomaly_detector.py  data_cleaner.py  schema_mapper.py
smartflow-etl/dags/: pipeline.py
smartflow-etl/dashboard/: app.py
smartflow-etl/data/: schema_mapping.json
smartflow-etl/data/quarantine/: quarantine_20260525.parquet
smartflow-etl/data/raw/: yellow_tripdata_2024-01.parquet
smartflow-etl/data/validation_reports/: validation_20260525_091835.json
smartflow-etl/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
smartflow-etl/great_expectations/: expectations.py
smartflow-etl/ingestion/: generate_dataset.py
(+26 files in other folders)
